
BUGS AND TODOS
--------------
general:
  * @todo export script
  * @todo this day in readmill script
  * @todo advanced search engine

book-comments.php:
  * @todo add closing comments
  * @todo add a no_merging=1 flag for debugging/example purposes.


VERSION 0.1, 2013-02-22
-----------------------
  * Initial public release.
