@@ -5,6 +5,9 @@ general:
   * @todo export script
   * @todo this day in readmill script
   * @todo advanced search engine
+  * @bug "to" support doesn't work for readings/:id/highlights, so we've
+      commented out the infinite loop in readmill_reading_highlights() for
+      now, meaning at most we'll at most get 100 highlights per reading.
 
 book-comments.php:
   * @todo add closing comments
